# ghost-ocr

./: .clang-format  CMakeLists.txt  README.md
cmake/DownloadProject/: DownloadProject.CMakeLists.cmake.in  DownloadProject.cmake
cmake/Modules/: FindTesseract.cmake
cmake/Utils/: Find.cmake  SetBuildType.cmake  SetCompilerVersion.cmake
include/: ghost.h  ghost_error.h  ghostscript.h  ghostscript_op.h  glimpse_sensor.h  utils.h
src/: CMakeLists.txt  ghost.cpp  ghostscript.cpp  ghostscript_op.cpp  glimpse_sensor.cpp  utils.cpp
test/: CMakeLists.txt  test.cpp
test/include/: test.h  test_ghostscript.h  test_glimpse_sensor.h
